syntax = "proto3";

message CreateRequest {
  oneof request {
    CreateMetadata metadata = 1;
    WritePacket packet = 2;
  }
}

message CreateMetadata {
  string path = 1;
  uint32 permissions = 2;
}

message WritePacket {
  bytes buffer = 1;
}

message CreateResponse {
}

service FsService {
  rpc Create (stream CreateRequest) returns (CreateResponse);
}
